--- a/resume.tex
+++ b/resume.tex
@@ -56,7 +56,7 @@
 
     \section{Contact}
     
-    \email{fra.sette.p.c@giìmail.com}
+    \email{fra.sette.p.c@gmail.com}
     \email{frraane@protonmail.com}
     %\phone{}
     \location{Turin, Italy}
